2016-03-29    <Administrator@PC33>

	* custom.el: change font to source-code-pro
	add 'delete-thing-at-point
	change er/delete-char-or-word fun
	default fg color: #E5E5DE

2016-03-28    <Administrator@PC33>

	* custom.el (tramp-default-method): comment this
	(my-kill-thing-at-point): add defun
	(kbd): add er/delete-char-or-word

2016-03-26    <Administrator@PC33>

	* custom.el (tramp-auto-save-directory): change remote emacs autosave folder
	(copy-line): small format change
	(select-current-pair): add new select-current-pair func
	(kbd): bind
	(kbd): bind C-S-l to sel paragraph
	(kbd): bind C-V to paste

2016-03-21    <Administrator@PC33>

	* custom.el: add tern.js
	(copy-line): restore copy-line append
	(kbd):Change to C-V when paste
	(kbd): C-+, C-0 to mc

2016-03-19    <Administrator@PC33>

	* custom.el (default-font-size): set default font-size
	(;; custom-set-faces was added by Custom.
 ;; If you edit it by hand, you could mess it up, so be careful.
 ;; Your init file should contain only one such instance.
 ;; If there is more than one, they won't work right.
 `(default ((t (:family "Courier New" :foundry "outline" :slant normal :weight normal :height ,default-font-size :width normal))))): font-size adject in mac
	(delete-backword-or-ws): remove message display
 (highlight-next-line): make goal position unchanged
 (move-parent-forward): add some format
 (search-selection): search current symbol
 (kbd): C-M-j above join
 (kbd): C-S-j next join
 (*is-a-mac*): setq var in mac, make option as commander key, font-size adj


2016-03-17    <Administrator@PC33>

	* custom.el (monokai-theme): load monokai theme
	(;; custom-set-variables was added by Custom.
 ;; If you edit it by hand, you could mess it up, so be careful.
 ;; Your init file should contain only one such instance.
 ;; If there is more than one, they won't work right.
	'(ac-use-fuzzy t)): use fuzzy search
	(wombat): use monokai instead of wombat
	(kill-paragraph-or-region): define this func